# DLF-VINO

./: README.md  TComTorch.cpp
DLF-TF/: DLF23.pb  DLF28.pb  DLF32.pb  DLF36.pb  DLF40.pb  module.py  nn.py  parameters_ai_qp23.pa  parameters_ai_qp28.pa  parameters_ai_qp32.pa  parameters_ai_qp36.pa  parameters_ai_qp40.pa  resize.py  test_pb.py  to_pb.py
DLF-pytorch/: model.py  readme.txt  test.py  train.py  utils.py
HM-16.7_VINO/: CMakeLists.txt
HM-16.7_VINO/App/TAppEncoder/: encmain.cpp
HM-16.7_VINO/Lib/TLibCommon/: TComLoopFilter.cpp  TComLoopFilter.h  TComPic.cpp  TComPic.h
HM-16.7_VINO/Lib/TLibDecoder/: TDecCu.cpp  TDecCu.h  TDecSlice.cpp
HM-16.7_VINO/Lib/TLibEncoder/: TEncCu.cpp  TEncCu.h  TEncGOP.cpp  TEncSlice.cpp  TEncSlice.h
HM-16.7_VINO/Lib/TLibTorch/: CMakeLists_cpy.txt  TComTorch.cpp
HM-16.7_VINO/Lib/TLibVino/: TComVino.cpp  TComVino.h
imcl_GUI/: camera.py  imcl.sh  imcl_GUI.py  yuvplayer.py
imcl_GUI/IR/QP23/fp16/: DLF_fp16_160x128_23.xml
imcl_GUI/IR/QP23/fp32/: DLF_fp32_160x128_23.mapping  DLF_fp32_160x128_23.xml
imcl_GUI/IR/QP28/fp16/: DLF_fp16_160x128_28.mapping  DLF_fp16_160x128_28.xml
imcl_GUI/IR/QP28/fp32/: DLF_fp32_160x128_28.xml
imcl_GUI/IR/QP33/fp16/: DLF_fp16_160x128_33.mapping  DLF_fp16_160x128_33.xml
imcl_GUI/IR/QP33/fp32/: DLF_fp32_160x128_33.mapping  DLF_fp32_160x128_33.xml
imcl_GUI/IR/QP38/fp16/: DLF_fp16_160x128_38.mapping  DLF_fp16_160x128_38.xml
imcl_GUI/IR/QP38/fp32/: DLF_fp32_160x128_38.mapping  DLF_fp32_160x128_38.xml
imcl_GUI/IR/QP40/fp16/: DLF_fp16_160x128_40.mapping  DLF_fp16_160x128_40.xml
imcl_GUI/IR/QP40/fp32/: DLF_fp32_160x128_40.mapping  DLF_fp32_160x128_40.xml
